# Connect_4_AI

./: CMakeLists.txt  README.md  setup_cmakelist.bat
incs/: Grid.hpp  draw.hpp  globals.hpp  minimax.hpp  user_input.hpp  utils.hpp
srcs/: Grid.cpp  draw.cpp  main.cpp  minimax.cpp  user_input.cpp  utils.cpp
